# TestWork

./: docker-compose.yml  pyproject.toml
djangoProject6/: settings.py  urls.py
suppliers/: admin.py  models.py  serializers.py  views.py
suppliers/migrations/: 0001_initial.py  0002_remove_suppliers_debt_and_more.py  0003_alter_individualentrepreneur_debt.py  0004_alter_individualentrepreneur_debt.py  0005_alter_contact_options_alter_product_options_and_more.py
